nextcloud_postgres/nextcloud/nextcloud-service.yml
apiVersion: v1
kind: Service
metadata:
  app: nextcloud-service
  name: nextcloud-service
spec:
  selector:
    app: nextcloud-app
  ports:
    - name: 8081-tcp
      protocol: TCP
      port: 8081
      targetPort: 8081
